# python-utcp

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  google_apis.json  manual_creation_guide.md  pyproject.toml  requirements.txt  socket_plugin_test.py  test_websocket_manual.py  utcp_manual.json
.github/workflows/: sync-spec-docs.yml  test.yml
core/: EMBEDDING_SEARCH_README.md  MANIFEST.in  README.md  pyproject.toml
core/examples/: embedding_search_example.py
core/src/utcp/: __init__.py  discovery.py  utcp_client.py
core/src/utcp/data/: auth.py  call_template.py  register_manual_response.py  tool.py  utcp_client_config.py  utcp_manual.py  variable_loader.py
core/src/utcp/data/auth/: __init__.py  api_key_auth.py  oauth2_auth.py
core/src/utcp/data/auth_implementations/: __init__.py  api_key_auth.py  basic_auth.py  oauth2_auth.py
core/src/utcp/data/variable_loader/: __init__.py  dot_env_variable_loader.py  variable_loader.py
core/src/utcp/data/variable_loader_implementations/: __init__.py  dot_env_variable_loader.py
core/src/utcp/exceptions/: __init__.py  utcp_serializer_validation_error.py  utcp_variable_not_found_exception.py
core/src/utcp/implementations/: __init__.py  async_rwlock.py  default_variable_substitutor.py  embedding_search.py  in_mem_tool_repository.py  tag_search.py  utcp_client_implementation.py
core/src/utcp/implementations/existing_standard_converters/: openapi_converter.py
core/src/utcp/implementations/post_processors/: __init__.py  filter_dict_post_processor.py  limit_strings_post_processor.py
core/src/utcp/interfaces/: communication_protocol.py  concurrent_tool_repository.py  serializer.py  tool_post_processor.py  tool_repository.py  tool_search_strategy.py  variable_substitutor.py
core/src/utcp/plugins/: discovery.py  plugin_loader.py
core/src/utcp/python_specific_tooling/: async_rwlock.py  tool_decorator.py  version.py
core/tests/client/: test_utcp_client.py
core/tests/client/transport_interfaces/: sample_tools.json  test_http_transport.py
core/tests/data/: test_tool_schema.py
core/tests/implementations/: test_embedding_search.py
docs/: openapi-ingestion.md  presentation.tex
example/: README.md  client.py  requirements.txt  server.py
example/src/full_llm_example/: example.env  newsapi_manual.json  openai_utcp_example.py  providers.json
example/src/openai_agent_example/: requirements.txt  server.py
example/src/secret_manager_example/: client.py
example/src/simple_example/: client.py  server.py
example/src/websocket_example/: README.md  providers.json  websocket_client.py  websocket_server.py
plugins/communication_protocols/cli/: README.md  pyproject.toml
plugins/communication_protocols/file/: README.md  pyproject.toml
plugins/communication_protocols/gnmi/: README.md  pyproject.toml
plugins/communication_protocols/gnmi/src/utcp_gnmi/: __init__.py  gnmi_call_template.py  gnmi_communication_protocol.py
plugins/communication_protocols/gnmi/tests/: test_gnmi_plugin.py
plugins/communication_protocols/gql/: README.md  pyproject.toml
plugins/communication_protocols/gql/old_tests/: test_graphql_transport.py
plugins/communication_protocols/gql/src/utcp_gql/: __init__.py  _security.py  gql_call_template.py  gql_communication_protocol.py
plugins/communication_protocols/gql/stc/utcp_gql/: gql_call_template.py  gql_communication_protocol.py
plugins/communication_protocols/gql/tests/: test_gql_security.py  test_graphql_integration.py  test_graphql_protocol.py
plugins/communication_protocols/http/: README.md  pyproject.toml
plugins/communication_protocols/http/src/utcp_http/: __init__.py  _security.py  http_call_template.py  http_communication_protocol.py  openapi_converter.py  sse_call_template.py  sse_communication_protocol.py  streamable_http_call_template.py  streamable_http_communication_protocol.py
plugins/communication_protocols/http/tests/: sample_tools.json  test_auth_tools.py  test_http_communication_protocol.py  test_http_transport.py  test_openapi_converter.py  test_openapi_converter_auth.py  test_redirect_security.py  test_security.py  test_sse_communication_protocol.py  test_sse_transport.py  test_streamable_http_communication_protocol.py  test_streamable_http_transport.py  test_x_utcp_auth_extension.py
plugins/communication_protocols/mcp/: MANIFEST.in  README.md  pyproject.toml
plugins/communication_protocols/mcp/src/utcp_mcp/: __init__.py  mcp_call_template.py  mcp_communication_protocol.py
plugins/communication_protocols/mcp/tests/: mock_http_mcp_server.py  mock_mcp_server.py  test_mcp_http_transport.py  test_mcp_transport.py
plugins/communication_protocols/socket/: README.md  pyproject.toml
plugins/communication_protocols/text/: README.md  pyproject.toml
plugins/communication_protocols/text/src/utcp_text/: __init__.py  text_call_template.py  text_communication_protocol.py
plugins/communication_protocols/text/tests/: test_text_communication_protocol.py
plugins/communication_protocols/websocket/: README.md  pyproject.toml
plugins/communication_protocols/websocket/src/utcp_websocket/: __init__.py  _security.py  websocket_call_template.py  websocket_communication_protocol.py
plugins/communication_protocols/websocket/tests/: __init__.py  test_websocket_call_template.py  test_websocket_security.py
plugins/tool_search/embedding/: README.md  pyproject.toml
plugins/tool_search/in_mem_embeddings/: README.md  pyproject.toml  test_integration.py  test_performance.py  test_plugin.py
plugins/tool_search/in_mem_embeddings/src/utcp_in_mem_embeddings/: __init__.py  in_mem_embeddings_search.py
plugins/tool_search/in_mem_embeddings/tests/: test_in_mem_embeddings_search.py  test_integration.py  test_performance.py  test_plugin.py
scripts/: extract_required_docs.py  fetch_google_apis.py  interact_with_google_apis.py  openapi_to_utcp_manual.py  socket_sanity.py
src/utcp/: __init__.py  version.py
src/utcp/client/: __init__.py  client_transport_interface.py  openapi_converter.py  (+6 more)
tests/client/: test_openapi_converter.py  test_openapi_converter_auth.py  test_utcp_client.py
(+49 files in other folders)
