[project]
name = "utcp"
version = "0.1.0"
authors = [
  { name="Razvan-Ion Radulescu", email="razvan.radulescu@bevel.software" },
]
description = "Universal Tool Calling Protocol (UTCP) client library for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://utcp.io"
Source = "https://github.com/universal-tool-calling-protocol/python-utcp"
Issues = "https://github.com/universal-tool-calling-protocol/python-utcp/issues"