[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utcp-gnmi"
version = "1.0.0"
authors = [
  { name = "UTCP Contributors" },
]
description = "UTCP gNMI communication protocol plugin over gRPC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "protobuf>=4.21",
    "grpcio>=1.60",
    "utcp>=1.0",
    "aiohttp>=3.8"
]
license = "MPL-2.0"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.entry-points."utcp.plugins"]
gnmi = "utcp_gnmi:register"