[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utcp-websocket"
version = "1.0.0"
authors = [
  { name = "UTCP Contributors" },
]
description = "UTCP communication protocol plugin for WebSocket real-time bidirectional communication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.8",
    "utcp>=1.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "pytest-cov",
    "coverage",
    "twine",
]

[project.urls]
Homepage = "https://utcp.io"
Source = "https://github.com/universal-tool-calling-protocol/python-utcp"
Issues = "https://github.com/universal-tool-calling-protocol/python-utcp/issues"

[project.entry-points."utcp.plugins"]
websocket = "utcp_websocket:register"
