[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utcp-in-mem-embeddings"
version = "1.0.0"
authors = [
  { name = "UTCP Contributors" },
]
description = "UTCP plugin providing in-memory embedding-based semantic tool search."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "utcp>=1.0",
    "numpy>=2.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.2.0",
    "torch>=1.9.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]


[project.urls]
Homepage = "https://utcp.io"
Source = "https://github.com/universal-tool-calling-protocol/python-utcp"
Issues = "https://github.com/universal-tool-calling-protocol/python-utcp/issues"

[project.entry-points."utcp.plugins"]
in_mem_embeddings = "utcp_in_mem_embeddings:register"
